--- a/package.json
+++ b/package.json
@@ -1,8 +1,10 @@
 {
   "name": "eslint-demo",
   "scripts": {
+    "build": "vite build",
     "format": "prettier --write .",
-    "lint": "eslint --fix ."
+    "lint": "eslint --fix .",
+    "start": "vite"
   },
   "dependencies": {
     "react": "~18.3.1",
@@ -12,6 +14,7 @@
     "@eslint/js": "~9.12.0",
     "@types/react": "~18.3.11",
     "@types/react-dom": "~18.3.1",
+    "@vitejs/plugin-react": "^4.3.2",
     "eslint": "~9.12.0",
     "eslint-plugin-import": "~2.31.0",
     "eslint-plugin-jsx-a11y": "~6.10.0",
@@ -19,7 +22,8 @@
     "eslint-plugin-react-hooks": "~5.0.0",
     "prettier": "~3.3.3",
     "typescript": "~5.6.3",
-    "typescript-eslint": "~8.10.0"
+    "typescript-eslint": "~8.10.0",
+    "vite": "^5.4.9"
   },
   "prettier": {
     "singleQuote": true
